--- a/mysite/templates/home/contact.html
+++ b/mysite/templates/home/contact.html
@@ -3,4 +3,30 @@
 
 {%block body%}
  {% comment %} <h3>This is a heading</h3>  {% endcomment %}
+ <div class="container">
+    <h1 class="">Contact Us<h1/>
+ <form method="post" action="/contact">
+    {% comment %} whenever we are using post request in form in django we have to use csrf_token {% endcomment %}
+     {% csrf_token %}
+    <div class="form-group">
+      <label for="name" >Name</label>
+      <input type="text" class="form-control" id="name" name="name" aria-describedby="name">
+    </div>
+    <div class="form-group">
+        <label for="email" >Email Address</label>
+        <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="phone" >Phone Number</label>
+        <input type="phone" class="form-control" id="phone" name="phone">
+      </div>
+      <div class="form-group">
+        <label for="content" >Describe Your issue:</label>
+        <textarea  class="form-control" name="content" id="content" cols="30" rows="5"></textarea>
+      </div>
+    
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
  {% endblock body%}
