--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Blogs</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -28,15 +28,34 @@
               <li class="nav-item">
                 <a class="nav-link" href="/blog"  aria-disabled="true">Blog</a>
               </li>
+            
+             
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <button type="button" class="btn btn-success mr-2" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+            <button type="button" class="btn btn-success mr-2" data-bs-toggle="modal" data-bs-target="#signupModal">SignUp</button>
+            <form class="form-inline mx-2 my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
               </form>
-          </div>
-        </div>
+              
       </nav>
-      {% block body%}{% endblock body%}
+      {% comment %} <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signupModal">
+        Launch demo modal
+      </button>  {% endcomment %}
+ 
+      {% for message in messages%}
+      <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+        <strong>Message:</strong> {{message}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      {% endfor %}
+
+      {% block body%}
+      <!-- Button trigger modal -->
+
+  </div>
+</div>
+      {% endblock body%}
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
