--- a/mysite/templates/home/home.html
+++ b/mysite/templates/home/home.html
@@ -46,15 +46,16 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form action="/signup" method="post"> 
+        <form action="/login" method="post"> 
           <div class="form-group">
-            <label for="username">Username</label>
+            <label for="loginusername">Username</label>
             <input type="text" class="form-control" id="loginusername" name="loginusername" placeholder="Choose a unique username">
           </div>
           <div class="form-group">
             <label for="pass">Enter your password</label>
             <input type="password" class="form-control" id="pass" name="pass" placeholder="Enter your password ">
           </div>
+          {% csrf_token %}
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
